--- a/package.json
+++ b/package.json
@@ -48,10 +48,12 @@
     "axios": "^1.4.0",
     "change-case": "^4.1.2",
     "date-fns": "^2.29.3",
+    "formik": "^2.4.2",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
+    "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
