--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.11.10",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query": "^4.29.17",
     "apexcharts": "^3.37.0",
     "axios": "^1.4.0",
     "change-case": "^4.1.2",
